[gd_scene load_steps=3 format=3 uid="uid://c2oemo1vidfkt"]

[ext_resource type="Script" uid="uid://bboxbcojai75d" path="res://scripts/Enemies/spawn_emission.gd" id="1_ukrj7"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ukrj7"]
size = Vector2(209, 168)

[node name="spawn_emissions" type="Area2D"]
script = ExtResource("1_ukrj7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3.5, -3)
shape = SubResource("RectangleShape2D_ukrj7")
debug_color = Color(0.65098, 0.733333, 1, 0.188235)

[node name="cooldown" type="Timer" parent="."]
wait_time = 2.643

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(-2.00001, 0)
scale = Vector2(6.575, 4.975)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="timeout" from="cooldown" to="." method="_on_cooldown_timeout"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
